Fixed light-dark mode issues with the JS classes

--- a/front/src/sass/utils/_js-classes.scss
+++ b/front/src/sass/utils/_js-classes.scss
@@ -18,13 +18,16 @@
 
     border-radius: 100vmax;
 
+
     &--1 {
       background-color: var(--color-ycyw-1);
+      color: white;
 
     }
 
     &--2 {
       background-color: var(--color-ycyw-2);
+      color: black;
 
     }
   }
